--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,6 +9,13 @@
 @import "layout/_menu";
 @import "layout/_burger";
 @import "layout/_typography";
+@import "layout/_button";
 
 // Page styles
 @import "modules/_header";
+@import "modules/_footer";
+@import "modules/_accordion";
+@import "modules/_sponsor";
+@import "modules/_tabs";
+@import "modules/_swiper";
+@import "modules/_slider";
