--- a/app/scss/modules/_slider.scss
+++ b/app/scss/modules/_slider.scss
@@ -10,15 +10,15 @@
       z-index: 1;
     }
     &--first {
-      background: url("../../images/testimonials/1.jpg") no-repeat;
+      background: url("../images/testimonials/1.jpg") no-repeat;
       background-size: cover;
     }
     &--second{
-      background: url("../../images/testimonials/2.jpg") no-repeat;
+      background: url("../images/testimonials/2.jpg") no-repeat;
       background-size: cover;
     }
     &--third{
-      background: url("../../images/testimonials/3.jpg") no-repeat;
+      background: url("../images/testimonials/3.jpg") no-repeat;
       background-size: cover;
     }
   }
