--- a/app/scss/layout/_menu.scss
+++ b/app/scss/layout/_menu.scss
@@ -44,12 +44,11 @@
   }
   &__btn{
     color: #fff;
-
-    a{
-      color: #fff;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-    }
+  }
+  &__log{
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 10px;
   }
   &__item,
   &__list {
@@ -57,7 +56,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .menu {
     position: relative;
     &__wrapper {
@@ -137,7 +136,7 @@
         margin-left: 5px;
       }
       &--open{
-        color: $dark
+        color: $dark;
       }
     }
     &__logo{
